# csv-rolling-stats

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  Main.cc
include/: ArgParser.hpp  ExitCodes.h  IRollingQueue.hpp  ISampleReader.h  IStatProcessor.h  IStatWriter.h  NamedVal.hpp  Pipeline.h  PipelineReturnToExitProcessor.h  StatRow.h
src/core/: CMakeLists.txt  CircularBuffer.h  CircularBuffer.tpp  IRollingQueue.hpp  RollingMax.h  RollingMean.h  RollingMean.tpp  RollingMin.h  StatProcessor.cc  StatProcessor.h  StatProcessor.tpp
src/io/: CMakeLists.txt  CsvReader.cc  CsvReader.h  CsvWriter.cc  CsvWriter.h  IoLib.hpp
test/: CMakeLists.txt  MockReader.hpp  TestBasicRollingStats.cc  TestCsvRollingStats.cc  TestHelper.hpp  TestHelperTest.cc  TestPipeline.cc  TestReader.cc  TestWriter.cc
